Ajout de tests pour les classes Task et TaskService